@@ -2,6 +2,6 @@
   "assets/images/favicon.ico": "assets/images/favicon-e565ddfa3b.ico",
   "assets/javascripts/application.js": "assets/javascripts/application-a10a824a49.js",
   "assets/javascripts/modernizr.js": "assets/javascripts/modernizr-4ab42b99fd.js",
-  "assets/stylesheets/application.css": "assets/stylesheets/application-eaf860cca2.css",
+  "assets/stylesheets/application.css": "assets/stylesheets/application-bebd96117e.css",
   "assets/stylesheets/palettes.css": "assets/stylesheets/palettes-05ab2406df.css"
 }
